# nagios-plugins-egi-notebooks

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  build.sh  nagios-plugin-notebooks.spec  nagios-plugins-egi-notebooks.spec  pyproject.toml  setup.cfg  travis-deprecated.yml
.github/workflows/: check-links.yml  lint.yml  rpms.yaml
nagios_plugin_notebooks/: probe.py
nagios_plugins_egi_notebooks/: status.py
