[metadata]
name = nagios_plugin_notebooks 
summary = EGI Notebooks nagios plugin 
description-file = 
	README.md
author = Enol Fernandez 
author-email = enol.fernandez@egi.eu
home-page = 
classifier = 
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Topic :: System :: Monitoring

[global]
setup-hooks = 
	pbr.hooks.setup_hook

[files]
packages = 
	nagios_plugin_notebooks

[entry_points]
console_scripts = 
	egi-notebooks-plugin = nagios_plugin_notebooks.probe:main

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
