[metadata]
name = nagios_plugins_egi_notebooks
summary = EGI Notebooks nagios plugin
description-file =
	README.md
author = Enol Fernandez
author-email = enol.fernandez@egi.eu
home-page = https://github.com/EGI-Foundation/nagios-plugins-egi-notebooks
classifier =
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Topic :: System :: Monitoring

[global]
setup-hooks =
	pbr.hooks.setup_hook

[files]
packages =
	nagios_plugins_egi_notebooks

[entry_points]
console_scripts =
	egi-notebooks-probe = nagios_plugins_egi_notebooks.status:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
