[metadata]
name = nagios_plugins_egi_notebooks
summary = EGI Notebooks nagios plugin
description_file =
	README.md
author = Enol Fernandez
author_email = enol.fernandez@egi.eu
description = ARGO probes for the EGI Notebooks
home_page = https://github.com/EGI-Foundation/nagios-plugins-egi-notebooks
classifier =
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Topic :: System :: Monitoring
version = 0.3.0
license = ASL 2.0

[options]
include_package_data = True
packages = nagios_plugins_egi_notebooks

[options.entry_points]
console_scripts =
	egi-notebooks-probe = nagios_plugins_egi_notebooks.status:main
